# mail

./: .editorconfig  .gitignore  Cargo.toml  NOTICE  README.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/: lib.rs  main.rs
src/api/: error.rs  mod.rs  state.rs
src/api/v1/: accounts.rs  domains.rs  mailboxes.rs  mod.rs  queue.rs  status.rs
src/cli/: mod.rs  serve.rs
src/clock/: mod.rs
src/config/: account.rs  api.rs  dkim.rs  listener.rs  mod.rs  tls.rs  validate.rs
src/directory_store/: mod.rs
src/dkim/: canon.rs  mod.rs  sign.rs  signature.rs  verify.rs
src/dmarc/: aggregate.rs  aggregate_tests.rs  evaluate.rs  evaluate_tests.rs  mod.rs  record.rs  report.rs
src/imap/: command.rs  mailbox.rs  mailbox_tests.rs  mod.rs  server.rs  session.rs
src/imap/command/: command_tests.rs  mod.rs  parse.rs  search.rs
src/imap/session/: commands.rs  helpers.rs  mod.rs  session_tests.rs  session_tests_basic.rs  session_tests_commands.rs  session_tests_misc.rs  session_tests_search.rs
src/mtasts/: mod.rs  policy.rs
src/queue/: bounce.rs  client.rs  mod.rs  resolver.rs  worker.rs
src/smtp/: address.rs  auth.rs  command.rs  directory.rs  line.rs  mod.rs  reply.rs  server.rs  server_tests.rs  session.rs  session_tests_auth.rs  session_tests_basic.rs  sink.rs
src/spf/: dns.rs  evaluator.rs  evaluator_macro_tests.rs  evaluator_tests.rs  mod.rs  record.rs
src/storage/: delivery.rs  mod.rs  routing.rs  spool.rs
src/tls/: mod.rs
src/tlsrpt/: mod.rs  record.rs  report.rs  report_tests.rs
