[package]
name = "mail"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Self-hosted, headless mail server: SMTP, IMAP and modern email security through an API and CLI."
repository = "https://github.com/Glyndor/mail"
publish = false

[dependencies]

[profile.release]
lto = "thin"
strip = "symbols"
